fpga_proj/all_test_2/hardware/all_test_2.sdk/.metadata/.plugins/org.eclipse.cdt.ui/ghgh.build.log
21:46:45 **** Auto Build of configuration Debug for project ghgh ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ghgh_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
In file included from ../src/helloworld.c:5:0:
../../ghgh_bsp/ps7_cortexa9_0/include/xbasic_types.h:115:2: warning: #warning The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert. [-Wcpp]
 #warning  The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert.
  ^~~~~~~
../../ghgh_bsp/ps7_cortexa9_0/include/xbasic_types.h:116:2: warning: #warning Please refer the Standalone BSP UG647 for further details [-Wcpp]
 #warning  Please refer the Standalone BSP UG647 for further details
  ^~~~~~~
../src/helloworld.c: In function 'main':
../src/helloworld.c:20:23: error: lvalue required as left operand of assignment
       (int*)(addr +0) = 1;
                       ^
../src/helloworld.c:23:23: error: lvalue required as left operand of assignment
       (int*)(addr +0) = 0;
                       ^
src/subdir.mk:24: recipe for target 'src/helloworld.o' failed
make: *** [src/helloworld.o] Error 1

21:46:45 Build Finished (took 167ms)

